plugins/kotlin/idea/tests/testData/checker/codeFragments/anonymousObject.kt.fragment.k2
<error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'anonymousObject'.">anonymousObject</error>.kt.fragment